--- a/index.html
+++ b/index.html
@@ -24,15 +24,16 @@
 
             <!-- Main Content Column -->
             <div class="column main-content">
-                <h2>Overview : Apps with A.I.</h2>
+                <h2><span class="mint">Overview : Apps with A.I.</span></h2>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Making apps with A.I. tools.</p>
                 <ul>
                     <li>Draw a rough draft of your app idea on paper or a paint tool : layout screens, buttons and features. </li>
-                    <li>Make a first draft by describing with prompts to <a href="https://v0.dev/" target="_blank">v0.dev</a> or <a href="https://bolt.new/" target="_blank">bolt.new</a>, then make sure to select "Deploy" so it gives you a sample page link.</li>
+                    <li>Make a first draft by describing your app layout to <a href="https://v0.dev/" target="_blank">v0.dev</a> or <a href="https://bolt.new/" target="_blank">bolt.new</a>, then make sure to select "Deploy" so it gives you a sample page link.</li>
                     <li>Start your new app in your coding tools <a href="https://apps.apple.com/us/app/xcode/id497799835" target="_blank">Xcode</a> or <a href="https://developer.android.com/studio" target="_blank">Android Studio</a>, while having <a href="https://www.cursor.com/" target="_blank">Cursor</a> or <a href="https://windsurf.com/" target="_blank">Windsurf</a> A.I. to assist.</li>
                 </ul>
-                <h2>Steps</h2>
+                <h2><span class="mint">Steps</span></h2>
                 <ol>
-                    <li>Make a first draft by describing with prompts to <a href="https://v0.dev/" target="_blank">v0.dev</a> or <a href="https://bolt.new/" target="_blank">bolt.new</a>, then make sure to select "Deploy" so it gives you a sample page link.</li>
+                    <li>Make a first draft by describing your app layout to <a href="https://v0.dev/" target="_blank">v0.dev</a> or <a href="https://bolt.new/" target="_blank">bolt.new</a>, then make sure to select "Deploy" so it gives you a sample page link.</li>
                     <br>
                     <li>For Flutter, start <a href="https://developer.android.com/studio" target="_blank">Android Studio</a> with a Flutter app project name you want for your app. For Swift UI, start <a href="https://apps.apple.com/us/app/xcode/id497799835" target="_blank">Xcode</a> with a new name you want for the project. Note the folder it's created in.</li>
                     <br>
@@ -44,15 +45,15 @@
                     <br>
                     <li>Run your app device simulator to see your app results. For Android Studio, you'll see the <a href="https://developer.android.com/studio/run/emulator" target="_blank">"Run 'main.dart'"</a> command. For Xcode, you'll see the <a href="https://developer.apple.com/documentation/xcode/building-and-running-an-app" target="_blank">"Product->Run"</a> command.</li>
                     <br>
-                    <li>From the first versions of the app you see, continue to have <a href="https://www.cursor.com/" target="_blank">Cursor</a> add screens, buttons and selections you want. Do a "Run" to see the new version each time.</li>
+                    <li>From the first versions of the app you see, continue to have <a href="https://www.cursor.com/" target="_blank">Cursor</a> add screens, customize buttons and selections you want. Do a "Run" to see the new version each time.</li>
                     <br>
-                    <li>Once you're done you can deploy, or side-load, your app to your iOS or Android phone. You can also put it up in the Apple or Android Appstore. Each Appstore has a registration process, paid for a yearly account.</li>
+                    <li>Once you're done you can deploy, or side-load, your app to your iOS or Android phone. You can also put it up in the Apple or Android Appstore. Each Appstore has a registration process, with yearly payment, to have the app loaded on.</li>
                 </ol>
             </div>
 
             <!-- Sidebar Column -->
             <div class="column sidebar">
-                <h2>Opensource Apps to Customize</h2>
+                <h2><span class="mint">Opensource Apps to Customize</span></h2>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;Here are free Opensource Appstore projects on iOS you can download to edit with <a href="https://www.cursor.com/" target="_blank">Cursor</a> or <a href="https://windsurf.com/" target="_blank">Windsurf</a>.</p>
                 <ul>
                     <li>From Github select the "Code" button, click "Download Zip" to Save.</li>
