--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <div class="header-container">
-        <img src="PicLD1.png" alt="Shoe Image" class="top-image">
-        <span class="brand-name">leapdeck</span>
-        <br>
+        <div class="column-right">
+ </div>
+        <div class="column-left">
+        
+            <img src="PicLD1.png" alt="Shoe Image" class="top-image">
+            <span class="brand-name">leapdeck</span><br>
+        </div>
     </div>
     <div class="container">
         <!-- Desktop Layout -->
@@ -21,12 +25,16 @@
                 <img src="sp3.png" alt="Image 2" class="left-image height=170 width=170">
                 <img src="sp2.png" alt="Image 3" class="left-image height=170 width=170">
                 <img src="sp4.png" alt="Image 3" class="left-image height=170 width=170">
+                <img src="sp5.png" alt="Image 3" class="left-image height=170 width=170">
+                <img src="sp6.png" alt="Image 3" class="left-image height=170 width=170">
+                <img src="sp7.png" alt="Image 3" class="left-image height=170 width=170">
+                <img src="sp8.png" alt="Image 3" class="left-image height=170 width=170">
             </div>
 
             <!-- Main Content Column -->
             <div class="column main-content">
                 <h2><span class="mint">Overview : Apps with A.I.</span></h2>
-                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Main points of making apps with A.I. tools :</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Making apps with A.I. tools :</p>
                 <ul>
                     <li>Draw a rough draft of your app idea on paper or a paint tool : layout screens, buttons and features. </li>
                     <li>Make a first draft by describing your app layout to <a href="https://v0.dev/" target="_blank">v0.dev</a> or <a href="https://bolt.new/" target="_blank">bolt.new</a>, then make sure to select "Deploy" so it gives you a sample page link.</li>
