--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                 <img src="sp6.png" alt="Image 3" class="left-image height=170 width=170">
                 <img src="sp7.png" alt="Image 3" class="left-image height=170 width=170">
                 <img src="sp8.png" alt="Image 3" class="left-image height=170 width=170">
+                <img src="sp9.png" alt="Image 3" class="left-image height=170 width=170">
+                <img src="sp10.png" alt="Image 3" class="left-image height=170 width=170">
+
             </div>
 
             <!-- Main Content Column -->
