--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
 
             <!-- Main Content Column -->
             <div class="column main-content">
-                <h2><span class="mint">Overview : Apps with A.I.</span></h2>
+                <h2><span class="mint">Overview : Apps with A.I.</span></h2><p></p>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Making apps with A.I. tools :</p>
                 <ul>
                     <li>Draw a rough draft of your app idea on paper or a paint tool : layout screens, buttons and features. </li>
                     <li>Make a first draft by describing your app layout to <a href="https://v0.dev/" target="_blank">v0.dev</a> or <a href="https://bolt.new/" target="_blank">bolt.new</a>, then make sure to select "Deploy" so it gives you a sample page link.</li>
                     <li>Start your new app in your coding tools <a href="https://apps.apple.com/us/app/xcode/id497799835" target="_blank">Xcode</a> or <a href="https://developer.android.com/studio" target="_blank">Android Studio</a>, while having <a href="https://www.cursor.com/" target="_blank">Cursor</a> or <a href="https://windsurf.com/" target="_blank">Windsurf</a> A.I. to assist.</li>
                 </ul>
-                <h2><span class="mint">Steps</span></h2>
+                <h2><span class="mint">Steps</span></h2><p></p>
                 <ol>
-                    <li>Make a first draft by describing your app layout to <a href="https://v0.dev/" target="_blank">v0.dev</a> or <a href="https://bolt.new/" target="_blank">bolt.new</a>, then make sure to select "Deploy" so it gives you a sample page link.</li>
+                    <li>Make a first draft by describing 👩🏾‍💻 your app layout to <a href="https://v0.dev/" target="_blank">v0.dev</a> or <a href="https://bolt.new/" target="_blank">bolt.new</a>, then make sure to select "Deploy" so it gives you a sample page link.</li>
                     <br>
                     <li>For Flutter, start <a href="https://developer.android.com/studio" target="_blank">Android Studio</a> with a Flutter app project name you want for your app. For Swift UI, start <a href="https://apps.apple.com/us/app/xcode/id497799835" target="_blank">Xcode</a> with a new name you want for the project. Note the folder it's created in.</li>
                     <br>
@@ -65,8 +65,8 @@
 
             <!-- Sidebar Column -->
             <div class="column sidebar">
-                <h2><span class="mint">Opensource Apps to Customize</span></h2>
-                <p>&nbsp;&nbsp;&nbsp;&nbsp;Here are free Opensource Appstore projects on iOS you can download to edit with <a href="https://www.cursor.com/" target="_blank">Cursor</a> or <a href="https://windsurf.com/" target="_blank">Windsurf</a>.</p>
+                <h2><span class="mint">Opensource Apps to Customize</span></h2><p></p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;Here are free Opensource 👨🏾‍💻 Appstore projects on iOS you can download to edit with <a href="https://www.cursor.com/" target="_blank">Cursor</a> or <a href="https://windsurf.com/" target="_blank">Windsurf</a>.</p>
                 <ul>
                     <li>From Github select the "Code" button, click "Download Zip" to Save.</li>
                     <li>Pick a folder directory and unzip the file to it.</li>
