--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
 
             <!-- Main Content Column -->
             <div class="column main-content">
-                <h2><span class="mint">Overview : Apps with A.I.</span></h2><p></p>
-                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="clearlink" href="">Making</a> apps with A.I. tools :</p>
+                <h2><span class="mint">Overview : Apps with A.I.</span></h2>
+                <a class="clearlink" href=""></a>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Making apps with A.I. tools :</p>
                 <ul>
                     <li>Draw a rough draft of your app idea on paper or a paint tool : layout screens, buttons and features. </li>
                     <li>Make a first draft by describing your app layout to <a href="https://v0.dev/" target="_blank">v0.dev</a> or <a href="https://bolt.new/" target="_blank">bolt.new</a>, then make sure to select "Deploy" so it gives you a sample page link.</li>
