--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 
             <!-- Main Content Column -->
             <div class="column main-content">
-                <h2><span class="mint">Overview : Apps with A.I.</span></h2>
-                <a class="clearlink" href=""></a>
+                <h2><span class="mint">Overview : Apps with A.I.</span></h2><a class="clearlink" href="" color="white">.</a>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Making apps with A.I. tools :</p>
                 <ul>
                     <li>Draw a rough draft of your app idea on paper or a paint tool : layout screens, buttons and features. </li>
