--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <!-- Main Content Column -->
             <div class="column main-content">
-                <h2><span class="mint">Overview : Apps with A.I.</span></h2><a class="clearlink" href="" color="white">.</a>
+                <h2><span class="mint">Overview : Apps with A.I.</span></h2><a class="clearlink" href="">&nbsp;</a>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Making apps with A.I. tools :</p>
                 <ul>
                     <li>Draw a rough draft of your app idea on paper or a paint tool : layout screens, buttons and features. </li>
@@ -45,7 +45,8 @@
                 </ul>
                 <h2><span class="mint">Steps</span></h2><p></p>
                 <ol>
-                    <li><a class="clearlink" href="">Make</a> a first draft by describing 👩🏾‍💻 your app layout to <a href="https://v0.dev/" target="_blank">v0.dev</a> or <a href="https://bolt.new/" target="_blank">bolt.new</a>, then make sure to select "Deploy" so it gives you a sample page link.</li>
+                    <a class="clearlink" href="">&nbsp;</a>
+                    <li>Make a first draft by describing 👩🏾‍💻 your app layout to <a href="https://v0.dev/" target="_blank">v0.dev</a> or <a href="https://bolt.new/" target="_blank">bolt.new</a>, then make sure to select "Deploy" so it gives you a sample page link.</li>
                     <br>
                     <li>For Flutter, start <a href="https://developer.android.com/studio" target="_blank">Android Studio</a> with a Flutter app project name you want for your app. For Swift UI, start <a href="https://apps.apple.com/us/app/xcode/id497799835" target="_blank">Xcode</a> with a new name you want for the project. Note the folder it's created in.</li>
                     <br>
