--- a/index.html
+++ b/index.html
@@ -24,14 +24,13 @@
                 <img src="sp1.png" alt="Image 1" class="left-image height=170 width=170" >
                 <img src="sp3.png" alt="Image 2" class="left-image height=170 width=170">
                 <img src="sp2.png" alt="Image 3" class="left-image height=170 width=170">
-                <img src="sp4.png" alt="Image 3" class="left-image height=170 width=170">
-                <img src="sp5.png" alt="Image 3" class="left-image height=170 width=170">
-                <img src="sp6.png" alt="Image 3" class="left-image height=170 width=170">
-                <img src="sp7.png" alt="Image 3" class="left-image height=170 width=170">
-                <img src="sp8.png" alt="Image 3" class="left-image height=170 width=170">
-                <img src="sp9.png" alt="Image 3" class="left-image height=170 width=170">
-                <img src="sp10.png" alt="Image 3" class="left-image height=170 width=170">
-
+                <img src="sp4.png" alt="Image 4" class="left-image height=170 width=170">
+                <img src="sp5.png" alt="Image 5" class="left-image height=170 width=170">
+                <img src="sp6.png" alt="Image 6" class="left-image height=170 width=170">
+                <img src="sp7.png" alt="Image 7" class="left-image height=170 width=170">
+                <img src="sp8.png" alt="Image 8" class="left-image height=170 width=170">
+                <img src="sp9.png" alt="Image 9" class="left-image height=170 width=170">
+                <img src="sp10.png" alt="Image 10" class="left-image height=170 width=170">
             </div>
 
             <!-- Main Content Column -->
@@ -66,7 +65,8 @@
 
             <!-- Sidebar Column -->
             <div class="column sidebar">
-                <h2><span class="mint"><a class="clearlink" href="">Opensource</a> Apps to Customize</span></h2><p></p>
+                <h2><span class="mint">Opensource</a> Apps to Customize</span></h2>
+                <a class="clearlink" href="">&nbsp;</a>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;Here are free Opensource 👨🏾‍💻 Appstore projects on iOS you can download to edit with <a href="https://www.cursor.com/" target="_blank">Cursor</a> or <a href="https://windsurf.com/" target="_blank">Windsurf</a>.</p>
                 <ul>
                     <li>From Github select the "Code" button, click "Download Zip" to Save.</li>
