--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
  </div>
         <div class="column-left">
         
-            <img src="PicLD1.png" alt="Shoe Image" class="top-image">
-            <span class="brand-name">leapdeck</span><br>
+            <a href="http://leapdeck.org"><img src="PicLD1.png" alt="Shoe Image" class="top-image">
+            <span class="brand-name">leapdeck</span><br></a>
         </div>
     </div>
     <div class="container">
