--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
                     <br>
                     <li>Run your app device simulator to see your app results. For Android Studio, you'll see the <a href="https://developer.android.com/studio/run/emulator" target="_blank">"Run 'main.dart'"</a> command. For Xcode, you'll see the <a href="https://developer.apple.com/documentation/xcode/building-and-running-an-app" target="_blank">"Product->Run"</a> command.</li>
                     <br>
-                    <li>From the first versions of the app you see, continue to have <a href="https://www.cursor.com/" target="_blank">Cursor</a> add screens, customize buttons and selections you want. Do a "Run" to see the new version each time.</li>
+                    <li>From the first versions of the app you see, continue to have <a href="https://www.cursor.com/" target="_blank">Cursor</a> add screens, customize buttons and selections you want. Some parts may vibe for you, add what you want. Do a "Run" to see the new version each time.</li>
                     <br>
-                    <li>Once you're done you can deploy, or side-load, your app to your iOS or Android phone. You can also put it up in the Apple or Android Appstore. Each Appstore has a registration process, with yearly payment, to have the app loaded on.</li>
+                    <li>Once you're done you can deploy, or side-load, your app to your <a href="https://developer.apple.com/documentation/xcode/distributing-your-app-to-registered-devices"  target="_blank">iOS phone</a> or <a href="https://developer.android.com/studio/run/device"  target="_blank">Android phone</a>. You can also put it up in the <a href="https://developer.apple.com/ios/submit/" target="_blank">Apple</a> or <a href="https://developer.android.com/studio/publish
+"https://developer.android.com/studio/publish" target="_blank">Android</a> Appstore. Each Appstore has a registration process, with yearly payment, to have the app loaded on.</li>
                 </ol>
             </div>
 
