--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
                         <p>Try on <a href="https://apps.apple.com/sa/app/e-motobike-updates/id1644648261" target="_blank">iOS</a></p>
                     </div>
                 </div>
+                <hr />
+                <div>
+                    You can also <a href="https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/working-with-forks/fork-a-repo">fork the repo</a> to revise your own version. 
+                </div>
             </div>
         </div>
 
