--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </div>
                 <hr />
                 <div>
-                    You can also <a href="https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/working-with-forks/fork-a-repo">fork the repo</a> to revise your own version. 
+                    You can also <a href="https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/working-with-forks/fork-a-repo"  target="_blank">fork the repo</a> to revise your own version. 
                 </div>
             </div>
         </div>
