--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="column-left">
         
             <a href="http://leapdeck.org"><img src="PicLD1.png" alt="Shoe Image" class="top-image">
-            <span class="brand-name">leapdeck</span><br></a>
+            <span class="brand-name">leapdeck : Happy Juneteenth!</span><br></a>
         </div>
     </div>
     <div class="container">
