--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     
                     <!-- Grid Section -->
                      
-                    <div class="grid-section">
+                    <div class="grid-section grid-desktop">
                         <div class="grid-item">
                             <a href="https://code2040.org/" target="blank"><img src="c2040.png" alt="Image 1" class="grid-image"></a>
                         </div>
