--- a/index.html
+++ b/index.html
@@ -139,6 +139,22 @@
                     You can also <a href="https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/working-with-forks/fork-a-repo"  target="_blank">fork the repo</a> to revise your own version. 
                 </div>
             </div>
+
+            <div class="grid-mobile">
+                <div class="grid-item2">
+                    <a href="https://code2040.org/" target="blank"><img src="c2040.png" alt="Image 1" class="grid-image"></a>
+                </div>
+                <div class="grid-item2">
+                    <a href="https://www.nsbe.org" target="blank"><img src="NsbeTile1.jpg" alt="Image 2" class="grid-image"></a>
+                </div>
+                <div class="grid-item2">
+                    <a href="https://blueskystarterpack.com/search?q=black+tech" target="blank"><img src="bsky1.png" alt="Image 3" class="grid-image"></a>
+                </div>
+                <div class="grid-item2">
+                    <a href="https://www.codenewbie.org/" target="blank"><img src="cnewbie.png" alt="Image 4" class="grid-image"></a>
+                </div>
+            </div>
+
         </div>
 
         <div class="color-rotation-container">
