--- a/index.html
+++ b/index.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8Q4HFSTFSD"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-8Q4HFSTFSD');
-    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>leapdeck</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-    
 <body>
     <div class="header-container">
         <div class="column-right">
@@ -129,7 +121,10 @@
                     <li>Once you're done you can deploy, or side-load, your app to your <a href="https://developer.apple.com/documentation/xcode/distributing-your-app-to-registered-devices"  target="_blank">iOS phone</a> or <a href="https://developer.android.com/studio/run/device"  target="_blank">Android phone</a>. You can also put it up in the <a href="https://developer.apple.com/ios/submit/" target="_blank">Apple</a> or <a href="https://developer.android.com/studio/publish
 "https://developer.android.com/studio/publish" target="_blank">Android</a> Appstore. Each Appstore has a registration process, with yearly payment, to have the app loaded on.</li>
                 </ol>
-            </div>
+                <hr />
+                <div>
+                     Same process for HTML, JavaScript and other web layouts. Start with your main index files containing basic tags saved in a folder locally, open them with Cursor or Windsurf, then view each revision with your browser.</div>
+            	</div>
 
             <!-- Sidebar Column -->
             <div class="column sidebar">
