--- a/index.html
+++ b/index.html
@@ -5,7 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>leapdeck</title>
     <link rel="stylesheet" href="styles.css">
+    
+  <!-- Primary tags -->
+  <title>Leapdeck – Cutting‑Edge Interactive Presentations & Innovative Online Learning Solutions</title>
+  <meta name="description"
+        content="Leapdeck empowers educators for A.I. instruction with engaging online tutorials for A.I. coding. Explore intuitive A.I. coding steps, projects and enhanced Opensource projects.” />
+
+  <meta name="keywords"
+        content="interactive presentations, online learning tools, Transformer, Neural, Tokenization, Embeddings, Fine-tuning, Prompt, Inference, Model, Algorithm, LLM, Machine Learning, Coding Agent, Vibe, Vibe Coding, A.I. instruction, e-learning platform, virtual classroom engagement “/>
+
+  <!-- Robots & Crawling Instructions -->
+  <meta name="robots" content="index, follow, noodp, noydir" />
+  <meta name="googlebot" content="index, follow" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://leapdeck.org/" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="Leapdeck – Interactive & Engaging e‑Learning Presentations" />
+  <meta property="og:description"
+        content="Transform your presentations and online classes with Leapdeck’s interactive slides, real‑time audience polling, and engaging multimedia tools." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://leapdeck.org/" />
+  <meta property="og:image" content="https://leapdeck.org/assets/img/og‑image‑fullscreen.png" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@LeapdeckOfficial" />
+  <meta name="twitter:title" content="Leapdeck – Interactive & Engaging e‑Learning Presentations" />
+  <meta name="twitter:description"
+        content="Elevate your teaching or presenting with interactive Leapdeck slides, live polls, and gamified online learning experiences." />
+  <meta name="twitter:image" content="https://leapdeck.org/assets/img/twitter‑card.png" />
+
+  <!-- Structured Data – JSON‑LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://leapdeck.org/",
+    "name": "Leapdeck",
+    "description": "Leapdeck – interactive online learning and presentation tools empowering educators and trainers with engaging multimedia and audience participation."
+  }
+  </script>
 </head>
+
 <body>
     <div class="header-container">
         <div class="column-right">
