--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Primary tags -->
   <title>Leapdeck – Cutting‑Edge Interactive Presentations & Innovative Online Learning Solutions</title>
   <meta name="description"
-        content="Leapdeck empowers educators for A.I. instruction with engaging online tutorials for A.I. coding. Explore intuitive A.I. coding steps, projects and enhanced Opensource projects.” />
+        content="Leapdeck empowers educators with tutorials for A.I. coding. Explore intuitive A.I. coding steps, A.I. Coding Assistants and enhanced Opensource projects.” />
 
   <meta name="keywords"
         content="interactive presentations, online learning tools, Transformer, Neural, Tokenization, Embeddings, Fine-tuning, Prompt, Inference, Model, Algorithm, LLM, Machine Learning, Coding Agent, Vibe, Vibe Coding, A.I. instruction, e-learning platform, virtual classroom engagement “/>
@@ -24,7 +24,7 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:title" content="Leapdeck – Interactive & Engaging e‑Learning Presentations" />
   <meta property="og:description"
-        content="Transform your presentations and online classes with Leapdeck’s interactive slides, real‑time audience polling, and engaging multimedia tools." />
+        content="Leapdeck empowers educators with tutorials for A.I. coding. Explore intuitive A.I. coding steps, A.I. Coding Assistants and enhanced Opensource projects." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://leapdeck.org/" />
   <meta property="og:image" content="https://leapdeck.org/assets/img/og‑image‑fullscreen.png" />
@@ -34,7 +34,7 @@
   <meta name="twitter:site" content="@LeapdeckOfficial" />
   <meta name="twitter:title" content="Leapdeck – Interactive & Engaging e‑Learning Presentations" />
   <meta name="twitter:description"
-        content="Elevate your teaching or presenting with interactive Leapdeck slides, live polls, and gamified online learning experiences." />
+        content="Leapdeck empowers educators with tutorials for A.I. coding. Explore intuitive A.I. coding steps, A.I. Coding Assistants and enhanced Opensource projects." />
   <meta name="twitter:image" content="https://leapdeck.org/assets/img/twitter‑card.png" />
 
   <!-- Structured Data – JSON‑LD -->
@@ -44,7 +44,7 @@
     "@type": "WebSite",
     "url": "https://leapdeck.org/",
     "name": "Leapdeck",
-    "description": "Leapdeck – interactive online learning and presentation tools empowering educators and trainers with engaging multimedia and audience participation."
+    "description": "Leapdeck - Empowers educators with tutorials for A.I. coding. Explore intuitive A.I. coding steps, A.I. Coding Assistants and enhanced Opensource projects."
   }
   </script>
 </head>
