--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Primary tags -->
   <title>Leapdeck – Cutting‑Edge Interactive Presentations & Innovative Online Learning Solutions</title>
   <meta name="description"
-        content="Leapdeck empowers educators with tutorials for A.I. coding. Explore intuitive A.I. coding steps, A.I. Coding Assistants and enhanced Opensource projects.” />
+        content="Leapdeck empowers educators for A.I. instruction with engaging online tutorials for A.I. coding. Explore intuitive A.I. coding steps, projects and enhanced Opensource projects.” />
 
   <meta name="keywords"
         content="interactive presentations, online learning tools, Transformer, Neural, Tokenization, Embeddings, Fine-tuning, Prompt, Inference, Model, Algorithm, LLM, Machine Learning, Coding Agent, Vibe, Vibe Coding, A.I. instruction, e-learning platform, virtual classroom engagement “/>
@@ -24,7 +24,7 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:title" content="Leapdeck – Interactive & Engaging e‑Learning Presentations" />
   <meta property="og:description"
-        content="Leapdeck empowers educators with tutorials for A.I. coding. Explore intuitive A.I. coding steps, A.I. Coding Assistants and enhanced Opensource projects." />
+        content="Transform your presentations and online classes with Leapdeck’s interactive slides, real‑time audience polling, and engaging multimedia tools." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://leapdeck.org/" />
   <meta property="og:image" content="https://leapdeck.org/assets/img/og‑image‑fullscreen.png" />
@@ -34,7 +34,7 @@
   <meta name="twitter:site" content="@LeapdeckOfficial" />
   <meta name="twitter:title" content="Leapdeck – Interactive & Engaging e‑Learning Presentations" />
   <meta name="twitter:description"
-        content="Leapdeck empowers educators with tutorials for A.I. coding. Explore intuitive A.I. coding steps, A.I. Coding Assistants and enhanced Opensource projects." />
+        content="Elevate your teaching or presenting with interactive Leapdeck slides, live polls, and gamified online learning experiences." />
   <meta name="twitter:image" content="https://leapdeck.org/assets/img/twitter‑card.png" />
 
   <!-- Structured Data – JSON‑LD -->
@@ -44,7 +44,7 @@
     "@type": "WebSite",
     "url": "https://leapdeck.org/",
     "name": "Leapdeck",
-    "description": "Leapdeck - Empowers educators with tutorials for A.I. coding. Explore intuitive A.I. coding steps, A.I. Coding Assistants and enhanced Opensource projects."
+    "description": "Leapdeck – interactive online learning and presentation tools empowering educators and trainers with engaging multimedia and audience participation."
   }
   </script>
 </head>
@@ -89,10 +89,16 @@
                             <a href="https://www.nsbe.org" target="blank"><img src="NsbeTile1.jpg" alt="Image 2" class="grid-image"></a>
                         </div>
                         <div class="grid-item">
-                            <a href="https://blueskystarterpack.com/search?q=black+tech" target="blank"><img src="bsky1.png" alt="Image 3" class="grid-image"></a>
+                            <a href="http://blackfacts.com" target="blank"><img src="BlackFacts1.jpg" alt="Black Facts" class="grid-image"></a>
                         </div>
                         <div class="grid-item">
-                            <a href="https://www.codenewbie.org/" target="blank"><img src="cnewbie.png" alt="Image 4" class="grid-image"></a>
+                            <a href="https://blueskystarterpack.com/search?q=black+tech" target="blank"><img src="bsky1.png" alt="Blue Sky" class="grid-image"></a>
+                        </div>
+                        <div class="grid-item">
+                            <a href="https://www.codenewbie.org/" target="blank"><img src="cnewbie.png" alt="Code Newbie" class="grid-image"></a>
+                        </div>
+                        <div class="grid-item">
+                            <a href="https://builtinternational.org/" target="blank"><img src="BUiLT.jpg" alt="BUiLT" class="grid-image"></a>
                         </div>
                     </div>
 
@@ -439,10 +445,16 @@
                     <a href="https://www.nsbe.org" target="blank"><img src="NsbeTile1.jpg" alt="Image 2" class="grid-image"></a>
                 </div>
                 <div class="grid-item2">
+                    <a href="http://blackfacts.com" target="blank"><img src="BlackFacts1.jpg" alt="Black Facts" class="grid-image"></a>
+                </div>
+                <div class="grid-item2">
                     <a href="https://blueskystarterpack.com/search?q=black+tech" target="blank"><img src="bsky1.png" alt="Image 3" class="grid-image"></a>
                 </div>
                 <div class="grid-item2">
-                    <a href="https://www.codenewbie.org/" target="blank"><img src="cnewbie.png" alt="Image 4" class="grid-image"></a>
+                    <a href="https://www.codenewbie.org/" target="blank"><img src="cnewbie.png" alt="Code Newbie" class="grid-image"></a>
+                </div>
+                <div class="grid-item2">
+                    <a href="https://builtinternational.org/" target="blank"><img src="BUiLT.jpg" alt="BUiLT" class="grid-image"></a>
                 </div>
             </div>
 
