--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
             
                     <!-- Mobile Card Container -->
                     <div class="mobile-card-container">
-                        <h3 class="card-container-title">Opensource and Mobile Apps from Black Developers</h3>
+                        <h3 class="card-container-title">Opensource and Mobile Apps from Black Devs</h3>
                         <div id="mobile-sites-list">
                             <!-- Sites will be loaded here by JavaScript -->
                         </div>
