--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="styles.css">
     
   <!-- Primary tags -->
-  <title>Leapdeck – Cutting‑Edge Interactive Presentations & Innovative Online Learning Solutions</title>
+  <title>Leapdeck – Variety of A.I. coding tips and resources for A.I. coding assistant tools.</title>
   <meta name="description"
-        content="Leapdeck empowers educators for A.I. instruction with engaging online tutorials for A.I. coding. Explore intuitive A.I. coding steps, projects and enhanced Opensource projects.” />
+        content="Leapdeck provides A.I. coding tips and resources for A.I. coding assistant tools. Explore intuitive A.I. coding steps, projects and enhanced Opensource projects.” />
 
   <meta name="keywords"
-        content="interactive presentations, online learning tools, Transformer, Neural, Tokenization, Embeddings, Fine-tuning, Prompt, Inference, Model, Algorithm, LLM, Machine Learning, Coding Agent, Vibe, Vibe Coding, A.I. instruction, e-learning platform, virtual classroom engagement “/>
+        content="online learning tools, Transformer, Neural, Tokenization, Embeddings, Fine-tuning, Prompt, Inference, Model, Algorithm, LLM, Machine Learning, Coding Agent, Vibe, Vibe Coding, A.I. instruction, e-learning platform, virtual classroom engagement “/>
 
   <!-- Robots & Crawling Instructions -->
   <meta name="robots" content="index, follow, noodp, noydir" />
@@ -22,9 +22,9 @@
   <link rel="canonical" href="https://leapdeck.org/" />
 
   <!-- Open Graph / Facebook -->
-  <meta property="og:title" content="Leapdeck – Interactive & Engaging e‑Learning Presentations" />
+  <meta property="og:title" content="Leapdeck – Variety of A.I. coding tips and resources for A.I. coding assistant tools." />
   <meta property="og:description"
-        content="Transform your presentations and online classes with Leapdeck’s interactive slides, real‑time audience polling, and engaging multimedia tools." />
+        content="Leapdeck provides A.I. coding tips and resources for A.I. coding assistant tools. Explore intuitive A.I. coding steps, projects and enhanced Opensource projects." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://leapdeck.org/" />
   <meta property="og:image" content="https://leapdeck.org/assets/img/og‑image‑fullscreen.png" />
@@ -32,9 +32,9 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@LeapdeckOfficial" />
-  <meta name="twitter:title" content="Leapdeck – Interactive & Engaging e‑Learning Presentations" />
+  <meta name="twitter:title" content="Leapdeck – Variety of A.I. coding tips and resources for A.I. coding assistant tools." />
   <meta name="twitter:description"
-        content="Elevate your teaching or presenting with interactive Leapdeck slides, live polls, and gamified online learning experiences." />
+        content="Leapdeck provides A.I. coding tips and resources for A.I. coding assistant tools. Explore intuitive A.I. coding steps, projects and enhanced Opensource projects." />
   <meta name="twitter:image" content="https://leapdeck.org/assets/img/twitter‑card.png" />
 
   <!-- Structured Data – JSON‑LD -->
@@ -44,7 +44,7 @@
     "@type": "WebSite",
     "url": "https://leapdeck.org/",
     "name": "Leapdeck",
-    "description": "Leapdeck – interactive online learning and presentation tools empowering educators and trainers with engaging multimedia and audience participation."
+    "description": "Leapdeck provides A.I. coding tips and resources for A.I. coding assistant tools. Explore intuitive A.I. coding steps, projects and enhanced Opensource projects."
   }
   </script>
 </head>
@@ -467,6 +467,8 @@
                                     sitesList.innerHTML = '<p>Unable to load content at this time.</p>';
                                 });
                         </script>
+                        <script type="text/javascript" src="https://enterpriseappit.workhub.ai/widget.js"></script>
+<script>addWidget('56olC9Jqwx3gIBNr8BJUQq', 'https://enterpriseappit.workhub.ai')</script>
                     </div>
                     
     			<!-- Articles Mobile Card -->
