--- a/index.html
+++ b/index.html
@@ -354,6 +354,12 @@
                         <p>Try on <a href="https://apps.apple.com/us/app/topbin-trivia/id6744351403" target="_blank">iOS</a></p>
                     </div>
                     <div class="app">
+                        <h3>SeaSnorkel Trivia : iOS Flutter App</h3>
+                        <p>Snorkeling trivia game with multiple categories.</p>
+                        <p>Opensource Github Repo : <a href="https://github.com/leapdeck/SeaSnorkelTrivia" target="_blank">[SeaSnorkel Trivia]</a></p>
+                        <p>Try on <a href="https://apps.apple.com/us/app/seasnorkel-trivia/id6747751140" target="_blank">iOS</a></p>
+                    </div>
+                    <div class="app">
                         <h3>SnackBucks : iOS SwiftUI App</h3>
                         <p>Price comparison app for foods in various countries.</p>
                         <p>Opensource Github Repo : <a href="https://github.com/leapdeck/SnackBucks" target="_blank">[SnackBucks]</a></p>
