--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
     <div id="aboutModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
-            <h2>Goal</h2>
+            <h2><span class="mint">Goal</span>/h2>
             <div class="values-content">
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;leapdeck's goal is to provide free Open-source resources for students and anyone developing apps or web services with generative A.I. tools.</p>
             </div>
             
-            <h2>Values</h2>
+            <h2><span class="mint">Values</span></h2>
             <div class="values-content">
                 <h3>Be user-centric:</h3>
                 <p>Think about tomorrow's users today. Understand their needs and habits, while empathizing to create forward-thinking solutions.</p>
