--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div id="aboutModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
-            <h2><span class="mint">Goal</span>/h2>
+            <h2><span class="mint">Goal</span></h2>
             <div class="values-content">
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;leapdeck's goal is to provide free Open-source resources for students and anyone developing apps or web services with generative A.I. tools.</p>
             </div>
