--- a/survey/index.html
+++ b/survey/index.html
@@ -10,7 +10,7 @@
     <title>AI Learning Survey</title>
     <style>
         body {
-            background: #2B7A9B !important;
+            background: #5595AF !important;
         }
         #logo img {
             width: 70px;
